[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = ["F", "E", "W", "I"]
exclude = []

[tool.ruff.lint.per-file-ignores]
"**/lc/*" = ["E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1